wip: ref counting implementation, first pass

--- a/crates/wrapper/Cargo.toml
+++ b/crates/wrapper/Cargo.toml
@@ -2,6 +2,10 @@
 name = "wrapper"
 version = "0.1.0"
 edition = "2021"
+build = "build.rs"
+
+[build-dependencies]
+anyhow = { workspace = true }
 
 [dependencies]
 anyhow = { workspace = true }
