--- a/crates/wrapper/Cargo.toml
+++ b/crates/wrapper/Cargo.toml
@@ -15,6 +15,7 @@ log = "0.4"
 tracing-log = "0.2.0"
 parking_lot = "0.12"
 bitflags = "2.4"
+chrono = "0.4"
 
 # Bindings for x86_64 Linux.
 [target.'cfg(all(target_os = "linux", target_arch = "x86_64"))'.dependencies]
