--- a/crates/cef-ui-simple/Cargo.toml
+++ b/crates/cef-ui-simple/Cargo.toml
@@ -17,3 +17,4 @@ winit = "0.29"
 tracing = "0.1"
 tracing-log = "0.2"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+log = "0.4.20"
