--- a/crates/cef-ui-simple-helper/Cargo.toml
+++ b/crates/cef-ui-simple-helper/Cargo.toml
@@ -6,3 +6,8 @@ edition = "2021"
 [dependencies]
 anyhow = { workspace = true }
 libloading = "0.8"
+tracing = "0.1"
+tracing-log = "0.2"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+log = "0.4.20"
+rand = "0.8"
