Add binary targets to build the project

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,4 +1,7 @@
 [alias]
-cef-build = "run --bin cef-build --release"
+cef-build-debug = "run --bin cef-build --release"
+cef-build-release = "run --bin cef-build --release -- --release"
+cef-run-debug = "run --bin cef-run --release"
+cef-run-release = "run --bin cef-run --release -- --release"
 cef-clean = "run --bin cef-clean --release"
 cef-artifacts = "run --bin cef-artifacts --release"
