--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -8,6 +8,14 @@
             "options": {
                 "cwd": "${workspaceFolder}"
             }
+        },
+        {
+            "label": "cef-build-release",
+            "type": "cargo",
+            "command": "cef-build-release",
+            "options": {
+                "cwd": "${workspaceFolder}"
+            }
         }
     ]
 }
