--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,24 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "name": "Debug",
+            "type": "lldb",
+            "request": "launch",
+            "program": "${workspaceFolder}/target/debug/cef-ui-simple",
+            "cwd": "${workspaceFolder}",
+            "preLaunchTask": "cef-build-debug"
+
+        },
+        {
+            "name": "Release",
+            "type": "lldb",
+            "request": "launch",
+            "program": "${workspaceFolder}/target/release/cef-ui-simple",
+            "cwd": "${workspaceFolder}",
+            "preLaunchTask": "cef-build-release"
+
+        },
+        {
             "name": "Debug macOS",
             "type": "lldb",
             "request": "launch",
