Get sandbox support working on macOS

--- a/crates/cef-ui-simple-helper/Cargo.toml
+++ b/crates/cef-ui-simple-helper/Cargo.toml
@@ -2,6 +2,14 @@
 name = "cef-ui-simple-helper"
 version = "0.1.0"
 edition = "2021"
+build = "build.rs"
+
+[features]
+sandbox = []
+default = ["sandbox"]
+
+[build-dependencies]
+anyhow = { workspace = true }
 
 [dependencies]
 anyhow = { workspace = true }
