--- a/crates/cef-ui-simple/Cargo.toml
+++ b/crates/cef-ui-simple/Cargo.toml
@@ -4,6 +4,10 @@ version = "0.1.0"
 edition = "2021"
 build = "build.rs"
 
+[features]
+sandbox = []
+default = ["sandbox"]
+
 [build-dependencies]
 anyhow = { workspace = true }
 reqwest = { workspace = true }
