Move all common code to cef-ui-util

--- a/crates/cef-ui-simple/Cargo.toml
+++ b/crates/cef-ui-simple/Cargo.toml
@@ -9,10 +9,8 @@ sandbox = []
 default = ["sandbox"]
 
 [build-dependencies]
+cef-ui-util = { path = "../cef-ui-util" }
 anyhow = { workspace = true }
-reqwest = { workspace = true }
-tar = { workspace = true }
-flate2 = { workspace = true }
 
 [dependencies]
 cef-ui = { path = "../cef-ui" }
