--- a/crates/cef-ui/Cargo.toml
+++ b/crates/cef-ui/Cargo.toml
@@ -4,6 +4,10 @@ version = "0.1.0"
 edition = "2021"
 build = "build.rs"
 
+[build-dependencies]
+cef-ui-util = { path = "../cef-ui-util" }
+anyhow = { workspace = true }
+
 [dependencies]
 cef-ui-util = { path = "../cef-ui-util" }
 anyhow = { workspace = true }
