Fix how paths are used in CEF

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -5,4 +5,5 @@ cef-clean = "run --bin cef-clean --release"
 cef-artifacts = "run --bin cef-artifacts --release"
 
 [env]
-CEF_ARTIFACTS_DIR = { value = "artifacts", force = true }
+CEF_WORKSPACE_DIR = { relative = true, force = true, value = "" }
+CEF_ARTIFACTS_DIR = { relative = true, force = true, value = "artifacts" }
