--- a/crates/cef-ui/Cargo.toml
+++ b/crates/cef-ui/Cargo.toml
@@ -9,6 +9,7 @@ cef-ui-util = { path = "../cef-ui-util" }
 anyhow = { workspace = true }
 
 [dependencies]
+cef-ui-sys = { path = "../cef-ui-sys" }
 cef-ui-util = { path = "../cef-ui-util" }
 anyhow = { workspace = true }
 tracing-log = { workspace = true }
